force-app/main/default/objects/Bus__c/fields/Brakes__c.field-meta.xml
<CustomField>
    <fullName>Brakes__c</fullName>
    <formula>text( Sales_Order__r.Brakes__c )</formula>
    <label>Brakes</label>
    <type>Text</type>
</CustomField>