force-app/main/default/objects/Bus__c/fields/Budgeted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Margin__c</fullName>
    <label>Budgeted Margin</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>