force-app/main/default/objects/Bus__c/fields/Bus_Length__c.field-meta.xml
<CustomField>
    <fullName>Bus_Length__c</fullName>
    <formula>if( or(RecordType.Name =&quot;Delivered&quot;,RecordType.Name =&quot;Firm&quot;,RecordType.Name =&quot;In Service&quot;), text(Sales_Order__r.Length__c) , 

IF(INCLUDES( Opportunity_Line__r.Length__c , &quot;29&quot;), &quot;29&quot;, NULL) + 
IF(INCLUDES( Opportunity_Line__r.Length__c , &quot;35&quot;), &quot;35&quot;, NULL) + 
IF(INCLUDES( Opportunity_Line__r.Length__c , &quot;40&quot;), &quot;40&quot;, NULL)+ 
IF(INCLUDES( Opportunity_Line__r.Length__c , &quot;60&quot;), &quot;60&quot;, NULL))</formula>
    <label>Bus Length</label>
    <type>Text</type>
</CustomField>