force-app/main/default/objects/Bus__c/fields/Clear_Coat__c.field-meta.xml
<CustomField>
    <fullName>Clear_Coat__c</fullName>
    <formula>if(isnull( Sales_Order__c ),false, Sales_Order__r.Clear_Coat__c)</formula>
    <label>Clear Coat</label>
    <type>Checkbox</type>
</CustomField>