force-app/main/default/objects/Bus__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>