force-app/main/default/objects/Bus__c/fields/Customer_Bus_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bus_Number__c</fullName>
    <label>Customer Bus Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>