force-app/main/default/objects/Bus__c/fields/Days_in_PDI__c.field-meta.xml
<CustomField>
    <fullName>Days_in_PDI__c</fullName>
    <formula>PDI_Completion_Date__c - Delivered_Date__c</formula>
    <label>Days in PDI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>