force-app/main/default/objects/Bus__c/fields/Days_in_Transit__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Transit__c</fullName>
    <formula>Delivered_Date__c - Shipped_Date__c</formula>
    <label>Days in Transit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>