force-app/main/default/objects/Bus__c/fields/Days_waiting_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Days_waiting_Shipment__c</fullName>
    <formula>Shipped_Date__c - Green_Sheet_Date__c</formula>
    <label>Days waiting Shipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>