force-app/main/default/objects/Bus__c/fields/Delivery_Company__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Company__c</fullName>
    <description>Delivery Company</description>
    <formula>Delivery_Driver__r.Account.Name</formula>
    <inlineHelpText>The company that the delivery driver works for</inlineHelpText>
    <label>Delivery Company</label>
    <type>Text</type>
</CustomField>