force-app/main/default/objects/Bus__c/fields/Delivery_Driver__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Driver that delivered bus</description>
    <label>Delivery Driver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Driver</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>