force-app/main/default/objects/Bus__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <formula>text(Sales_Order__r.Engine__c)</formula>
    <label>Engine</label>
    <type>Text</type>
</CustomField>