force-app/main/default/objects/Bus__c/fields/First_Bus__c.field-meta.xml
<CustomField>
    <fullName>First_Bus__c</fullName>
    <formula>Sequence__c =1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Bus</label>
    <type>Checkbox</type>
</CustomField>