force-app/main/default/objects/Bus__c/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <label>Fleet</label>
    <referenceTo>Fleet__c</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>