force-app/main/default/objects/Bus__c/fields/Generate_Inspection_Record__c.field-meta.xml
<CustomField>
    <fullName>Generate_Inspection_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the eCard Inspection needs to be re-created</description>
    <label>Generate Inspection Record</label>
    <type>Checkbox</type>
</CustomField>