force-app/main/default/objects/Bus__c/fields/Green_Sheet_Date__c.field-meta.xml
<CustomField>
    <fullName>Green_Sheet_Date__c</fullName>
    <label>Green Sheet Date</label>
    <type>Date</type>
</CustomField>