force-app/main/default/objects/Bus__c/fields/Green_Sheet_to_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Green_Sheet_to_Acceptance__c</fullName>
    <formula>Acceptance_Date__c - Green_Sheet_Date__c</formula>
    <label>Green Sheet to Acceptance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>