force-app/main/default/objects/Bus__c/fields/Gross_Margin_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Dollars__c</fullName>
    <label>Gross Margin Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>