force-app/main/default/objects/Bus__c/fields/HVAC_System__c.field-meta.xml
<CustomField>
    <fullName>HVAC_System__c</fullName>
    <formula>text( Sales_Order__r.HVAC_System__c )</formula>
    <label>HVAC System</label>
    <type>Text</type>
</CustomField>