force-app/main/default/objects/Bus__c/fields/Internal_Name_Bus__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name_Bus__c</fullName>
    <formula>Internal_Name__c&amp;&quot;  (&quot;&amp; Name &amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Name (Bus)</label>
    <type>Text</type>
</CustomField>