force-app/main/default/objects/Bus__c/fields/is_Firm__c.field-meta.xml
<CustomField>
    <fullName>is_Firm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Firm&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Firm</label>
    <type>Checkbox</type>
</CustomField>