force-app/main/default/objects/Bus__c/fields/is_Future_Holding__c.field-meta.xml
<CustomField>
    <fullName>is_Future_Holding__c</fullName>
    <formula>IF( RecordType.DeveloperName == &apos;To_Be_Scheduled&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Future Holding</label>
    <type>Checkbox</type>
</CustomField>