force-app/main/default/objects/Bus__c/fields/is_Reserved__c.field-meta.xml
<CustomField>
    <fullName>is_Reserved__c</fullName>
    <formula>IF( RecordType.DeveloperName == &apos;Reserved&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Reserved</label>
    <type>Checkbox</type>
</CustomField>