force-app/main/default/objects/Bus__c/fields/is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>is_Scheduled__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Scheduled&apos; , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Scheduled</label>
    <type>Checkbox</type>
</CustomField>