force-app/main/default/objects/Bus__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <externalId>true</externalId>
    <label>Item_ID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>