force-app/main/default/objects/Bus__c/fields/ITS_System__c.field-meta.xml
<CustomField>
    <fullName>ITS_System__c</fullName>
    <formula>text( Sales_Order__r.ITS_System__c )</formula>
    <label>ITS System</label>
    <type>Text</type>
</CustomField>