force-app/main/default/objects/Bus__c/fields/ITS_System_Type__c.field-meta.xml
<CustomField>
    <fullName>ITS_System_Type__c</fullName>
    <formula>text( Sales_Order__r.ITS_System_Type__c )</formula>
    <label>ITS System Type</label>
    <type>Text</type>
</CustomField>