force-app/main/default/objects/Bus__c/fields/Job_Order_Backflush_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Backflush_Date__c</fullName>
    <description>Syteline Transaction date from Job Transaction where Transaction Type is &quot;Run&quot;</description>
    <label>Job Order Backflush Date</label>
    <type>Date</type>
</CustomField>