force-app/main/default/objects/Bus__c/fields/Job_Order_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Complete_Date__c</fullName>
    <description>Set to Last Modified Date from Job when the Status of Job Order changes from Released Complete</description>
    <label>Job Order Complete Date</label>
    <type>Date</type>
</CustomField>