force-app/main/default/objects/Bus__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <formula>if( or(RecordType.Name =&quot;Delivered&quot;,RecordType.Name =&quot;Firm&quot;,RecordType.Name =&quot;In Service&quot;), text(Sales_Order__r.Mode__c) , 

IF(INCLUDES( Opportunity_Line__r.Mode__c , &quot;Diesel&quot;), &quot;Diesel&quot;, NULL)+ 
IF(INCLUDES( Opportunity_Line__r.Mode__c , &quot;CNG&quot;), &quot;CNG&quot;, NULL)  + 
IF(INCLUDES( Opportunity_Line__r.Mode__c , &quot;Allison Hybrid&quot;), &quot;Allison Hybrid&quot;, NULL)+ 
IF(INCLUDES( Opportunity_Line__r.Mode__c , &quot;BAE Hybrid&quot;), &quot;BAE Hybrid&quot;, NULL) + 
IF(INCLUDES( Opportunity_Line__r.Mode__c , &quot;Electric&quot;), &quot;Electric&quot;, NULL))</formula>
    <label>Mode</label>
    <type>Text</type>
</CustomField>