force-app/main/default/objects/Bus__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Sales_Order__r.Model__c</formula>
    <label>Model</label>
    <type>Text</type>
</CustomField>