force-app/main/default/objects/Bus__c/fields/Opportunity_Line__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line</label>
    <referenceTo>Opportunity_Line__c</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>