force-app/main/default/objects/Bus__c/fields/Out_of_Factory_Comment__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Factory_Comment__c</fullName>
    <label>Out of Factory Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>