force-app/main/default/objects/Bus__c/fields/Out_of_Factory_Location__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Factory_Location__c</fullName>
    <description>Location of the bus after Production and before shipped</description>
    <label>Out of Factory Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dirt Lot</fullName>
                <default>true</default>
                <label>Dirt Lot</label>
            </value>
            <value>
                <fullName>RR WIP</fullName>
            </value>
            <value>
                <fullName>Fence</fullName>
            </value>
            <value>
                <fullName>Lane 3</fullName>
            </value>
            <value>
                <fullName>BS RR</fullName>
            </value>
            <value>
                <fullName>Picture Land</fullName>
            </value>
            <value>
                <fullName>Off Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>