force-app/main/default/objects/Bus__c/fields/Paint_Passes__c.field-meta.xml
<CustomField>
    <fullName>Paint_Passes__c</fullName>
    <formula>if(isnull( Sales_Order__c ),0,(Sales_Order__r.Paint_Passes__c))</formula>
    <label>Paint Passes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>