force-app/main/default/objects/Bus__c/fields/Passenger_Seating_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Seating_Manufacturer__c</fullName>
    <formula>TEXT(Sales_Order__r.Passenger_Seating_Manufacturer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger Seating Manufacturer</label>
    <type>Text</type>
</CustomField>