force-app/main/default/objects/Bus__c/fields/PDI_Owner__c.field-meta.xml
<CustomField>
    <fullName>PDI_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDI Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Buses1</relationshipName>
    <type>Lookup</type>
</CustomField>