force-app/main/default/objects/Bus__c/fields/PDI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PDI_Start_Date__c</fullName>
    <label>PDI Start Date</label>
    <type>Date</type>
</CustomField>