force-app/main/default/objects/Bus__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <formula>Sales_Order__r.PO_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>