force-app/main/default/objects/Bus__c/fields/Preproduction_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Preproduction_Meeting_Date__c</fullName>
    <formula>Sales_Order__r.Preproduction_Meeting__c</formula>
    <label>Preproduction Meeting Date</label>
    <type>Date</type>
</CustomField>