force-app/main/default/objects/Bus__c/fields/Production_Order__c.field-meta.xml
<CustomField>
    <fullName>Production_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Order</label>
    <referenceTo>Production_Order__c</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>