force-app/main/default/objects/Bus__c/fields/Production_Order_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Production_Order_Sequence__c</fullName>
    <label>Production Order Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>