force-app/main/default/objects/Bus__c/fields/Project_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Manager__c</fullName>
    <formula>if(isblank( Sales_Order__c ), Current_Owner__r.Project_Sales_Manager__r.FirstName +&quot; &quot;+Current_Owner__r.Project_Sales_Manager__r.LastName, Sales_Order__r.Owner:User.FirstName + &apos; &apos; + Sales_Order__r.Owner:User.LastName)</formula>
    <label>Project Sales Manager</label>
    <type>Text</type>
</CustomField>