force-app/main/default/objects/Bus__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>if( or(RecordType.Name =&quot;Delivered&quot;,RecordType.Name =&quot;Firm&quot;,RecordType.Name =&quot;In Service&quot;),  Sales_Order__r.Quantity__c , Opportunity_Line__r.Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>