force-app/main/default/objects/Bus__c/fields/Ready_Row_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ready_Row_Notes__c</fullName>
    <label>Ready Row Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>