force-app/main/default/objects/Bus__c/fields/Rear_Door__c.field-meta.xml
<CustomField>
    <fullName>Rear_Door__c</fullName>
    <formula>TEXT(Sales_Order__r.Rear_Door__c)</formula>
    <label>Rear Door</label>
    <type>Text</type>
</CustomField>