force-app/main/default/objects/Bus__c/fields/Reservation_ID__c.field-meta.xml
<CustomField>
    <fullName>Reservation_ID__c</fullName>
    <label>Reservation ID</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>