force-app/main/default/objects/Bus__c/fields/Sales_Order_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Release_Date__c</fullName>
    <formula>Sales_Order__r.Sales_Order_Release__c</formula>
    <label>Sales Order Release Date</label>
    <type>Date</type>
</CustomField>