force-app/main/default/objects/Bus__c/fields/Saved_by__c.field-meta.xml
<CustomField>
    <fullName>Saved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the user last saved the bus details</description>
    <label>Saved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>