force-app/main/default/objects/Bus__c/fields/Scheduled_Green_Sheet_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Green_Sheet_Date__c</fullName>
    <label>Scheduled Green Sheet Date</label>
    <type>Date</type>
</CustomField>