force-app/main/default/objects/Bus__c/fields/Sell_Today__c.field-meta.xml
<CustomField>
    <fullName>Sell_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sell Today</label>
    <type>Checkbox</type>
</CustomField>