force-app/main/default/objects/Bus__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Holds Serial Number will be populated by the sales process</description>
    <label>Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>