force-app/main/default/objects/Bus__c/fields/Slot_Index__c.field-meta.xml
<CustomField>
    <fullName>Slot_Index__c</fullName>
    <description>Holds slot index within the week</description>
    <label>Slot Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>