force-app/main/default/objects/Bus__c/fields/Slot_Index_In_Day__c.field-meta.xml
<CustomField>
    <fullName>Slot_Index_In_Day__c</fullName>
    <description>Holds slot index within the day</description>
    <label>Slot Index In Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>