force-app/main/default/objects/Bus__c/fields/Slots__c.field-meta.xml
<CustomField>
    <fullName>Slots__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Holds slots needed for each bus based on the length</description>
    <label>Slots</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>