force-app/main/default/objects/Bus__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Out Of Factory</fullName>
            </value>
            <value>
                <fullName>Ready Row</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Out for Test</fullName>
            </value>
            <value>
                <fullName>Altoona</fullName>
            </value>
            <value>
                <fullName>Road Test</fullName>
            </value>
            <value>
                <fullName>On Delivery</fullName>
            </value>
            <value>
                <fullName>Repair Shop</fullName>
            </value>
            <value>
                <fullName>PDI</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>