force-app/main/default/objects/Bus__c/fields/Tag_Created_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tag_Created_Reason__c</fullName>
    <formula>text(Opportunity_Line__r.Tag_Request__c)</formula>
    <label>Tag Created Reason</label>
    <type>Text</type>
</CustomField>