force-app/main/default/objects/Bus__c/fields/Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Testing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Refer to documentation attached on the bus record for details of the testing to be performed.</inlineHelpText>
    <label>Testing Required</label>
    <type>Checkbox</type>
</CustomField>