force-app/main/default/objects/Bus__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <formula>text( Sales_Order__r.Transmission__c )</formula>
    <label>Transmission</label>
    <type>Text</type>
</CustomField>