force-app/main/default/objects/Bus__c/fields/Wheelchair_Ramp__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair_Ramp__c</fullName>
    <formula>text( Sales_Order__r.Wheelchair_Ramp__c )</formula>
    <label>Wheelchair Ramp</label>
    <type>Text</type>
</CustomField>