force-app/main/default/objects/Bus__c/fields/X27_Weeks_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>X27_Weeks_Before_Start__c</fullName>
    <formula>Start_Date__c -(7*27)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>27 Week Mark</label>
    <type>Date</type>
</CustomField>