force-app/main/default/objects/Bus__c/fields/X32_Weeks_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>X32_Weeks_Before_Start__c</fullName>
    <formula>Start_Date__c -(7*32)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>32 Weeks Before Start</label>
    <type>Date</type>
</CustomField>