force-app/main/default/objects/Bus__c/fields/X35_Weeks_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>X35_Weeks_Before_Start__c</fullName>
    <formula>Start_Date__c -(7*35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>35 Weeks Mark</label>
    <type>Date</type>
</CustomField>