force-app/main/default/objects/Bus__c/recordTypes/Delivered.recordType-meta.xml
<RecordType>
    <fullName>Delivered</fullName>
    <active>true</active>
    <description>Bus has a delivered date</description>
    <label>Delivered</label>
</RecordType>