force-app/main/default/objects/Bus__c/recordTypes/Firm.recordType-meta.xml
<RecordType>
    <fullName>Firm</fullName>
    <active>true</active>
    <description>Sales order had been created</description>
    <label>Firm</label>
</RecordType>