force-app/main/default/objects/Bus__c/recordTypes/Forecasted.recordType-meta.xml
<RecordType>
    <fullName>Forecasted</fullName>
    <active>true</active>
    <description>Busses that are forecasted to be sold</description>
    <label>Forecasted</label>
</RecordType>