force-app/main/default/objects/Bus__c/recordTypes/In_Service.recordType-meta.xml
<RecordType>
    <fullName>In_Service</fullName>
    <active>true</active>
    <description>Bus has an in-service date</description>
    <label>In Service</label>
</RecordType>