force-app/main/default/objects/Bus__c/recordTypes/Reserved.recordType-meta.xml
<RecordType>
    <fullName>Reserved</fullName>
    <active>true</active>
    <description>Opportunity Line has a start date</description>
    <label>Reserved</label>
</RecordType>