force-app/main/default/objects/Bus__c/recordTypes/Retired.recordType-meta.xml
<RecordType>
    <fullName>Retired</fullName>
    <active>true</active>
    <description>Bus has been retired from the fleet</description>
    <label>Retired</label>
</RecordType>