force-app/main/default/objects/Bus__c/recordTypes/Scheduled.recordType-meta.xml
<RecordType>
    <fullName>Scheduled</fullName>
    <active>true</active>
    <description>Opportunity line has serial number and start date</description>
    <label>Scheduled</label>
</RecordType>