force-app/main/default/objects/Bus__c/recordTypes/To_Be_Scheduled.recordType-meta.xml
<RecordType>
    <fullName>To_Be_Scheduled</fullName>
    <active>true</active>
    <description>Bus with Serial Number but no start date</description>
    <label>To Be Scheduled</label>
</RecordType>