force-app/main/default/objects/Bus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mode__c</columns>
    <columns>Bus_Length__c</columns>
    <columns>Style__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>WIP</value>
    </filters>
    <label>All</label>
</ListView>