force-app/main/default/objects/Bus__c/listViews/Bus_Hold_Search.listView-meta.xml
<ListView>
    <fullName>Bus_Hold_Search</fullName>
    <columns>NAME</columns>
    <columns>Internal_Name__c</columns>
    <columns>Bus_Length__c</columns>
    <columns>Mode__c</columns>
    <columns>Transmission__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessThan</operation>
        <value>8/23/2019</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>8/5/2019</value>
    </filters>
    <label>Bus Hold Search</label>
    <sharedTo>
        <role>Engineer</role>
    </sharedTo>
</ListView>