force-app/main/default/objects/Bus__c/listViews/Electric_Buses.listView-meta.xml
<ListView>
    <fullName>Electric_Buses</fullName>
    <columns>NAME</columns>
    <columns>Current_Owner__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Sequence__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Bus_Length__c</columns>
    <columns>Green_Sheet_Date__c</columns>
    <columns>Shipped_Date__c</columns>
    <columns>Delivered_Date__c</columns>
    <columns>Internal_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode__c</field>
        <operation>equals</operation>
        <value>Electric</value>
    </filters>
    <label>Electric Buses</label>
</ListView>