force-app/main/default/objects/Bus__c/listViews/Jose_Garcia_s_PDIs.listView-meta.xml
<ListView>
    <fullName>Jose_Garcia_s_PDIs</fullName>
    <columns>Internal_Name__c</columns>
    <columns>NAME</columns>
    <columns>Shipped_Date__c</columns>
    <columns>PDI_Start_Date__c</columns>
    <columns>PDI_Completion_Date__c</columns>
    <columns>Acceptance_Date__c</columns>
    <columns>In_service_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDI_Owner__c</field>
        <operation>equals</operation>
        <value>Jose Garcia</value>
    </filters>
    <label>Jose Garcia&apos;s PDIs</label>
    <sharedTo>
        <roleAndSubordinates>Director_Customer_Care</roleAndSubordinates>
    </sharedTo>
</ListView>